; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_ec.c_ec_transaction.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_ec.c_ec_transaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.transaction = type { i32, i32, i32*, i32*, i32 }

@first_ec = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ec_transaction(i32 %0, i32* %1, i32 %2, i32* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.transaction, align 8
  store i32 %0, i32* %8, align 4
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %15 = getelementptr inbounds %struct.transaction, %struct.transaction* %14, i32 0, i32 0
  %16 = load i32, i32* %10, align 4
  store i32 %16, i32* %15, align 8
  %17 = getelementptr inbounds %struct.transaction, %struct.transaction* %14, i32 0, i32 1
  %18 = load i32, i32* %12, align 4
  store i32 %18, i32* %17, align 4
  %19 = getelementptr inbounds %struct.transaction, %struct.transaction* %14, i32 0, i32 2
  %20 = load i32*, i32** %11, align 8
  store i32* %20, i32** %19, align 8
  %21 = getelementptr inbounds %struct.transaction, %struct.transaction* %14, i32 0, i32 3
  %22 = load i32*, i32** %9, align 8
  store i32* %22, i32** %21, align 8
  %23 = getelementptr inbounds %struct.transaction, %struct.transaction* %14, i32 0, i32 4
  %24 = load i32, i32* %8, align 4
  store i32 %24, i32* %23, align 8
  %25 = load i32, i32* @first_ec, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %30, label %27

27:                                               ; preds = %6
  %28 = load i32, i32* @ENODEV, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %7, align 4
  br label %33

30:                                               ; preds = %6
  %31 = load i32, i32* @first_ec, align 4
  %32 = call i32 @acpi_ec_transaction(i32 %31, %struct.transaction* %14)
  store i32 %32, i32* %7, align 4
  br label %33

33:                                               ; preds = %30, %27
  %34 = load i32, i32* %7, align 4
  ret i32 %34
}

declare dso_local i32 @acpi_ec_transaction(i32, %struct.transaction*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
